# SoftAlign

./: .gitignore  COLAB_SoftAlign.ipynb  README.md  SoftAlign_training.ipynb  Structure_Search_SoftAlign.ipynb  align.py  pyproject.toml  requirements.txt  structure_search.py
Colab/: COLAB_SoftAlign.ipynb  SCOPE_SEARCH_SoftAlign.ipynb  SoftAlign_training.ipynb  Structure_Search_SoftAlign.ipynb
models/: CONT_SW_05_T_3_1
scripts/: convert_models_to_npz.py
softalign/: END_TO_END_MODELS.py  Input_MPNN.py  MPNN.py  SW.py  __init__.py
softalign/decoder/: __init__.py  data.py  inference.py  model.py  training.py  visualization.py
softalign/models/: CONT_SFT_06_T_3_1  CONT_SFT_06_T_3_1.npz  CONT_SW_05_T_3_1.npz
