[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "softalign"
version = "0.1.0"
description = "Fork of SoftAlign"
authors = [
  { name="Diego del Alamo" }
]
requires-python = ">=3.9"
dependencies = [
  "absl-py==2.2.2",
  "biopython==1.85",
  "chex==0.1.89",
  "dm-haiku==0.0.14",
  "etils==1.12.2",
  "flax==0.10.6",
  "jax==0.6.0",
  "jaxlib==0.6.0",
  "numpy==2.2.6",
  "optax==0.2.4",
  "orbax-checkpoint==0.11.13",
  "pandas==2.2.3",
  "protobuf==6.31.0",
  "scipy==1.15.3",
  "tensorstore==0.1.75",
  "treescope==0.1.9",
]

[tool.setuptools]
packages = ["softalign"]
