[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "softalign"
version = "0.1.0"
description = "Fork of SoftAlign"
authors = [
  { name="Diego del Alamo" }
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["softalign"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
